// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerPresenter disables the whole form when on loading state 1`] = `
<div>
  <div
    class="tlp-form-element tlp-form-element-disabled"
  >
    <label
      class="tlp-label tlp-checkbox"
    >
      <input
        type="checkbox"
      />
      Activate the banner on this project
    </label>
  </div>
   
  <div>
    <div
      class="tlp-form-element tlp-form-element-disabled"
    >
      <label
        class="tlp-label"
        for="description"
      >
        Message
      </label>
       
      <textarea
        class="tlp-textarea"
        id="description"
        name="description"
        placeholder="Choose a banner message"
      />
       
      <p
        class="tlp-text-muted"
      >
        
                Your message will be condensed to one line
            
      </p>
    </div>
  </div>
   
  <div
    class="tlp-pane-section-submit"
  >
    <button
      class="tlp-button-primary"
      data-tlp-tooltip="Message is mandatory"
      disabled="disabled"
      type="button"
    >
      <i
        class="tlp-button-icon fa fa-fw fa-spin fa-circle fa-circle-o-notch"
      />
       
      <!---->
      Save the configuration
        
    </button>
  </div>
</div>
`;

exports[`BannerPresenter displays a default message and an unchecked switch if banner is not set 1`] = `
<div>
  <div
    class="tlp-form-element"
  >
    <label
      class="tlp-label tlp-checkbox"
    >
      <input
        type="checkbox"
      />
      Activate the banner on this project
    </label>
  </div>
   
  <div
    style="display: none;"
  >
    <div
      class="tlp-form-element"
    >
      <label
        class="tlp-label"
        for="description"
      >
        Message
      </label>
       
      <textarea
        class="tlp-textarea"
        id="description"
        name="description"
        placeholder="Choose a banner message"
      />
       
      <p
        class="tlp-text-muted"
      >
        
                Your message will be condensed to one line
            
      </p>
    </div>
  </div>
   
  <div
    class="tlp-pane-section-submit"
  >
    <button
      class="tlp-button-primary"
      data-tlp-tooltip="Message is mandatory"
      type="button"
    >
      <!---->
       
      <i
        class="tlp-button-icon fa fa-save"
      />
      Save the configuration
        
    </button>
  </div>
</div>
`;

exports[`BannerPresenter displays the banner and a checked switch if banner is set 1`] = `
<div>
  <div
    class="tlp-form-element"
  >
    <label
      class="tlp-label tlp-checkbox"
    >
      <input
        type="checkbox"
      />
      Activate the banner on this project
    </label>
  </div>
   
  <div>
    <div
      class="tlp-form-element"
    >
      <label
        class="tlp-label"
        for="description"
      >
        Message
      </label>
       
      <textarea
        class="tlp-textarea"
        id="description"
        name="description"
        placeholder="Choose a banner message"
      />
       
      <p
        class="tlp-text-muted"
      >
        
                Your message will be condensed to one line
            
      </p>
    </div>
  </div>
   
  <div
    class="tlp-pane-section-submit"
  >
    <button
      class="tlp-button-primary"
      data-tlp-tooltip="Message is mandatory"
      type="button"
    >
      <!---->
       
      <i
        class="tlp-button-icon fa fa-save"
      />
      Save the configuration
        
    </button>
  </div>
</div>
`;
